--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#650000</color>
+    <color name="primaryVariantColor">#520000</color>
+    <color name="secondaryColor">#130501</color>
+    <color name="secondaryVariantColor">#130501</color>
+
+    <color name="backgroundColor">#ffffff</color>
+    <color name="surfaceColor">#f8f9fa</color>
+
+    <color name="onPrimaryColor">#ffffff</color>
+    <color name="onSecondaryColor">#ffffff</color>
+
+    <color name="onBackgroundColor">#130501</color>
+    <color name="onSurfaceColor">#130501</color>
 </resources>
