--- a/app/src/main/res/layout/list_item_measurements.xml
+++ b/app/src/main/res/layout/list_item_measurements.xml
@@ -12,10 +12,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
+        android:textAlignment="viewEnd"
         android:textColor="@color/onSurfaceColor"
         android:textSize="@dimen/dimen_16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/textViewMeasurement"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Tues, 21:10" />
 
@@ -23,23 +27,32 @@
         android:id="@+id/textViewMeasurement"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-medium"
+        android:maxLines="1"
         android:textColor="@color/onSurfaceColor"
         android:textSize="@dimen/dimen_24sp"
+        app:layout_constraintEnd_toStartOf="@+id/textViewTime"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="180.23" />
 
     <TextView
         android:id="@+id/textViewDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
+        android:textAlignment="viewEnd"
         android:textColor="@color/greyColor"
         android:textSize="@dimen/dimen_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/textViewUnit"
         app:layout_constraintTop_toBottomOf="@+id/textViewTime"
         tools:text="12th Jun, 2024" />
 
@@ -50,6 +63,10 @@
         android:fontFamily="sans-serif"
         android:textColor="@color/greyColor"
         android:textSize="@dimen/dimen_12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewDate"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewMeasurement"
         tools:text="@string/mmol_l" />
