--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,10 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_4dp"
-            android:layout_marginBottom="@dimen/dimen_8dp"
             android:textColor="@color/primaryColor"
             android:textSize="@dimen/dimen_14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewMeasurement"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewMeasurement"
             app:layout_constraintStart_toEndOf="@+id/textViewMeasurement"
             tools:text="@string/mmol_l" />
 
@@ -73,7 +72,7 @@
             android:hint="@string/_0_0"
             android:imeOptions="actionDone"
             android:inputType="numberDecimal"
-            android:maxLength="16"
+            android:maxLength="6"
             android:maxLines="1"
             android:paddingHorizontal="@dimen/dimen_8dp"
             android:textAlignment="viewEnd"
@@ -128,18 +127,21 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:layout_marginTop="@dimen/dimen_24dp"
-        android:paddingHorizontal="@dimen/dimen_8dp"
-        android:text="Measurement Units:"
+        android:text="@string/measurement_units"
         android:textColor="@color/onBackgroundColor"
         android:textSize="@dimen/dimen_16sp"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAverage" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="@dimen/dimen_24dp"
+        android:layout_marginHorizontal="@dimen/dimen_16dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textViewMeasurementUnits"
         app:layout_constraintTop_toTopOf="@+id/textViewMeasurementUnits">
 
@@ -147,7 +149,6 @@
             android:id="@+id/radioMmol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
             android:text="@string/mmol_l"
             android:textSize="@dimen/dimen_16sp" />
 
@@ -163,13 +164,14 @@
 
     <TextView
         android:id="@+id/textViewHistory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_16dp"
         android:fontFamily="sans-serif-medium"
         android:text="History"
         android:textColor="@color/secondaryColor"
         android:textSize="@dimen/dimen_20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAmountField" />
 
@@ -177,6 +179,7 @@
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/dimen_8dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
